--- a/src/main/webapp/resources/inward/finalTable.xhtml
+++ b/src/main/webapp/resources/inward/finalTable.xhtml
@@ -20,6 +20,7 @@
         <p:dataTable id="tb1" value="#{cc.attrs.bill.billItems}" var="bip"
                      rowStyleClass="#{bip.netValue !=0 or bip.adjustedValue!=0 ?bip.inwardChargeType.label eq 'Linen Charges' ?'redText':'':'noDisplayRow' }">
             <p:column headerText="searialNo">
+                #{bip.id}
                 <h:outputLabel   value="#{bip.searialNo}"/>
             </p:column>
             <p:column headerText="Inward Charge Type">
