--- a/src/main/webapp/reportCashier/report_cashier_detailed_user_by_billType.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_detailed_user_by_billType.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pe="http://primefaces.org/ui/extensions">
 
     <h:body>
 
@@ -59,8 +60,12 @@
                                 </p:commandButton>  
                                 <p:commandButton ajax="false"  
                                                  style="width: 90%; margin: auto;"
-                                                 actionListener="#{commonReport.fillBillTypeBills()}"
                                                  value="Excel"  styleClass="noPrintButton" >
+                                    <pe:exporter type="xlsx" 
+                                                 target="billed cancelled refunded Summary"  
+                                                 fileName="Day_END_By_Bill_Type" />
+
+
                                 </p:commandButton>
                             </h:panelGrid>
 
@@ -77,7 +82,7 @@
                             <h:panelGroup rendered="#{commonReport.billType eq 'OpdBill'}" >  
 
                                 <p:dataTable id="billed"  value="#{commonReport.billedBills.bills}" var="b" 
-                                             rendered="#{commonReport.billedBills.bills.size()>0}" sortBy="#{b.billType}"  >
+                                             sortBy="#{b.billType}"  >
 
                                     <f:facet name="header">  
 
@@ -260,8 +265,7 @@
 
                                 <p:spacer height="30"/>
 
-                                <p:dataTable id="cancelled"  value="#{commonReport.cancellededBills.bills}" var="b1" 
-                                             rendered="#{commonReport.cancellededBills.bills.size()>0}" >
+                                <p:dataTable id="cancelled"  value="#{commonReport.cancellededBills.bills}" var="b1" >
                                     <f:facet name="header">  
                                         <h:outputLabel value="Cancelled"/>
                                     </f:facet> 
@@ -419,7 +423,7 @@
                                 <p:spacer height="30"/>
 
                                 <p:dataTable id="refunded" value="#{commonReport.refundedBills.bills}" var="b"
-                                             sortBy="#{b.billType}"  rendered="#{commonReport.refundedBills.bills.size()>0}" >
+                                             sortBy="#{b.billType}"   >
                                     <f:facet name="header">  
                                         <h:outputLabel value="Refunded" />
                                     </f:facet> 
@@ -579,7 +583,8 @@
                             <p:spacer height="30"/>
 
                             <h:panelGroup rendered="#{commonReport.billType eq 'PharmacySale'}" >      
-                                <p:dataTable id="billedPh"  value="#{commonReport.billedBills.bills}" var="b" rendered="#{commonReport.billedBills.bills.size()>0}" sortBy="#{b.billType}"  >
+                                <p:dataTable id="billed"  value="#{commonReport.billedBills.bills}" var="b" 
+                                             sortBy="#{b.billType}"  >
 
                                     <f:facet name="header">  
                                         <h:outputLabel value="Opd Bills "/>
@@ -741,7 +746,8 @@
 
                                 <p:spacer height="30"/>
 
-                                <p:dataTable id="cancelledPh"  value="#{commonReport.cancellededBills.bills}" var="b1"  rendered="#{commonReport.cancellededBills.bills.size()>0}" >
+                                <p:dataTable id="cancelled"  value="#{commonReport.cancellededBills.bills}" var="b1"  
+                                             >
                                     <f:facet name="header">  
                                         <h:outputLabel value="Cancelled"/>
                                     </f:facet> 
@@ -891,7 +897,7 @@
 
                                 <p:spacer height="30"/>
 
-                                <p:dataTable id="refundPh" value="#{commonReport.refundedBills.bills}" var="b" sortBy="#{b.billType}"  rendered="#{commonReport.refundedBills.bills.size()>0}" >
+                                <p:dataTable id="refunded" value="#{commonReport.refundedBills.bills}" var="b" sortBy="#{b.billType}"  >
                                     <f:facet name="header">  
                                         <h:outputLabel value="Refunded" />
                                     </f:facet> 
@@ -1044,8 +1050,8 @@
                             <p:spacer height="30"/>
 
                             <h:panelGroup rendered="#{commonReport.billType eq 'PaymentBill'}">
-                                <p:dataTable id="payment" value="#{commonReport.billedBills.bills}" var="b" 
-                                             sortBy="#{b.billType}" rendered="#{commonReport.billedBills.bills.size()>0}" >
+                                <p:dataTable id="billed" value="#{commonReport.billedBills.bills}" var="b" 
+                                             sortBy="#{b.billType}"  >
                                     <f:facet name="header">  
                                         <h:outputLabel value="Payments"/>
                                     </f:facet> 
@@ -1111,10 +1117,9 @@
 
                                 <p:spacer height="30"/>
 
-                                <p:dataTable id="paymentCancel"
+                                <p:dataTable id="cancelled"
                                              value="#{commonReport.cancellededBills.bills}"
-                                             var="b"   sortBy="#{b.billType}" 
-                                             rendered="#{commonReport.cancellededBills.bills.size()>0}" >
+                                             var="b"   sortBy="#{b.billType}"  >
                                     <f:facet name="header">  
                                         <h:outputLabel value="PaymentsCancel" />
                                     </f:facet> 
@@ -1178,14 +1183,18 @@
                                     </p:columnGroup> 
                                 </p:dataTable>
 
+                                <p:dataTable id="refunded"
+                                             value="#{commonReport.blankBills}"
+                                             var="b"    >
+                                </p:dataTable>
+
                             </h:panelGroup>
 
                             <p:spacer height="30"/>
 
                             <h:panelGroup rendered="#{commonReport.billType eq 'PettyCash'}">
-                                <p:dataTable id="petty" value="#{commonReport.billedBills.bills}"
-                                             var="b4"   sortBy="#{b4.billType}"
-                                             rendered="#{commonReport.billedBills.bills.size()>0}">
+                                <p:dataTable id="billed" value="#{commonReport.billedBills.bills}"
+                                             var="b4"   sortBy="#{b4.billType}">
                                     <f:facet name="header">  
                                         <h:outputLabel value="Petty Cash Payment"/>
                                     </f:facet>
@@ -1286,9 +1295,8 @@
                                 <p:spacer height="30"/>
 
 
-                                <p:dataTable id="pettyCancel" value="#{commonReport.cancellededBills.bills}" 
-                                             var="b4"   sortBy="#{b4.billType}" 
-                                             rendered="#{commonReport.cancellededBills.bills.size()>0}" >
+                                <p:dataTable id="cancelled" value="#{commonReport.cancellededBills.bills}" 
+                                             var="b4"   sortBy="#{b4.billType}" >
                                     <f:facet name="header">  
                                         <h:outputLabel  value="Petty Cash Payment Cancel"/>
                                     </f:facet>
@@ -1384,6 +1392,11 @@
 
                                 </p:dataTable>
 
+                                <p:dataTable id="refunded"
+                                             value="#{commonReport.blankBills}"
+                                             var="b"    >
+                                </p:dataTable>
+
                             </h:panelGroup>
 
                             <p:spacer height="30"/>
@@ -1391,9 +1404,8 @@
 
 
                             <h:panelGroup rendered="#{commonReport.billType eq 'CashRecieveBill'}">
-                                <p:dataTable id="companyPay" value="#{commonReport.billedBills.bills}"
-                                             var="b7"   sortBy="#{b7.billType}" 
-                                             rendered="#{commonReport.billedBills.bills.size()>0}">
+                                <p:dataTable id="billed" value="#{commonReport.billedBills.bills}"
+                                             var="b7"   sortBy="#{b7.billType}" >
                                     <f:facet name="header">  
                                         <h:outputLabel value="Credit Company Payment Recieve"/>
                                     </f:facet> 
@@ -1498,7 +1510,7 @@
 
                                 <p:spacer height="30"/>
 
-                                <p:dataTable id="companyCancel" value="#{commonReport.cancellededBills.bills}"
+                                <p:dataTable id="cancelled" value="#{commonReport.cancellededBills.bills}"
                                              var="b7"   sortBy="#{b7.billType}" 
                                              rendered="#{commonReport.cancellededBills.bills.size()>0}">
                                     <f:facet name="header">  
@@ -1622,15 +1634,19 @@
                                     </p:columnGroup>
                                 </p:dataTable>
 
+
+                                <p:dataTable id="refunded"
+                                             value="#{commonReport.blankBills}"
+                                             var="b"    >
+                                </p:dataTable>
                             </h:panelGroup>
 
                             <p:spacer height="30"/>
 
                             <h:panelGroup rendered="#{commonReport.billType eq 'AgentPaymentReceiveBill'}">
 
-                                <p:dataTable id="agent" value="#{commonReport.billedBills.bills}" 
-                                             var="b7"   sortBy="#{b7.billType}"
-                                             rendered="#{commonReport.billedBills.bills.size()>0}">
+                                <p:dataTable id="billed" value="#{commonReport.billedBills.bills}" 
+                                             var="b7"   sortBy="#{b7.billType}">
                                     <f:facet name="header">  
                                         <h:outputLabel value="Cashier Agent Payment Detail Report"/>
                                     </f:facet> 
@@ -1737,9 +1753,8 @@
 
                                 <p:spacer height="30"/>
 
-                                <p:dataTable id="agentCancel"  value="#{commonReport.cancellededBills.bills}"
-                                             var="b7"   sortBy="#{b7.billType}"
-                                             rendered="#{commonReport.cancellededBills.bills.size()>0}">
+                                <p:dataTable id="cancelled"  value="#{commonReport.cancellededBills.bills}"
+                                             var="b7"   sortBy="#{b7.billType}">
                                     <f:facet name="header">  
                                         <h:outputLabel value="Agent Payment Cancel"/>
                                     </f:facet>
@@ -1864,13 +1879,18 @@
                                     </p:columnGroup> 
                                 </p:dataTable>
 
+                                <p:dataTable id="refunded"
+                                             value="#{commonReport.blankBills}"
+                                             var="b"    >
+                                </p:dataTable>
+
                             </h:panelGroup>
 
                             <p:spacer height="30"/>
 
                             <h:panelGroup rendered="#{commonReport.billType eq 'InwardPaymentBill'}">
 
-                                <p:dataTable id="inward" value="#{commonReport.billedBills.bills}" 
+                                <p:dataTable id="billed" value="#{commonReport.billedBills.bills}" 
                                              var="b"   sortBy="#{b.billType}"
                                              rendered="#{commonReport.billedBills.bills.size()>0}" >
                                     <f:facet name="header">  
@@ -1934,9 +1954,8 @@
 
                                 <p:spacer height="30"/>
 
-                                <p:dataTable id="inwardCancel" value="#{commonReport.cancellededBills.bills}" 
-                                             var="b"   sortBy="#{b.billType}"
-                                             rendered="#{commonReport.cancellededBills.bills.size()>0}" >
+                                <p:dataTable id="cancelled" value="#{commonReport.cancellededBills.bills}" 
+                                             var="b"   sortBy="#{b.billType}">
                                     <f:facet name="header">  
                                         <h:outputLabel value="Inward Payments Cancel"/>
                                     </f:facet> 
@@ -2011,6 +2030,10 @@
                                     </p:columnGroup> 
                                 </p:dataTable>
 
+                                <p:dataTable id="refunded"
+                                             value="#{commonReport.blankBills}"
+                                             var="b"    >
+                                </p:dataTable>
                             </h:panelGroup>
 
                             <p:spacer height="30"/>
@@ -2034,6 +2057,9 @@
 
 
                         </p:panel>
+
+
+
                     </p:panel>
 
                 </h:form>
