--- a/src/main/webapp/lab/report_cancelled_bill_search.xhtml
+++ b/src/main/webapp/lab/report_cancelled_bill_search.xhtml
@@ -11,31 +11,27 @@
             <ui:define name="content">
                 <h:form>
                     <p:panel header="Search Cancelled Bills of Approved Reports" >
-                        <f:facet name="header">
-                            <h:panelGrid columns="1" >
 
-                                <h:outputLabel value="From Date"/>
-                                <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm a" >      
-                                </p:calendar>
+                        <h:panelGrid columns="2" >
 
-                                <h:outputLabel value="To Date"/>
-                                <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm a" >                                                                              
-                                </p:calendar>
+                            <h:outputLabel value="From Date"/>
+                            <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="dd MMMM yyyy hh mm a" >      
+                            </p:calendar>
 
+                            <h:outputLabel value="To Date"/>
+                            <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm a" >                                                                              
+                            </p:calendar>
 
-                                <p:commandButton 
-                                    ajax="false" 
-                                    value="Search"
-                                    action="#{searchController.searchApprovedReportsWithCancelledOrReturnedBills()}" 
-                                    />
-                                <p:commandButton ajax="false" value="Download" >
-                                    <p:dataExporter target="tbl" type="xls" fileName="Cancelled Bills for Approved Reports" >
-                                    </p:dataExporter>
-                                </p:commandButton>
-                            </h:panelGrid>
-                        </f:facet>
-
-
+                            <p:commandButton 
+                                ajax="false" 
+                                value="Search"
+                                action="#{searchController.searchApprovedReportsWithCancelledOrReturnedBills()}" 
+                                />
+                            <p:commandButton ajax="false" value="Download" >
+                                <p:dataExporter target="tbl" type="xls" fileName="Cancelled Bills for Approved Reports" >
+                                </p:dataExporter>
+                            </p:commandButton>
+                        </h:panelGrid>
 
 
                         <p:dataTable  id="tbl" 
@@ -50,11 +46,7 @@
 
                                       >
 
-                            <p:column  headerText="Date" styleClass="alignTop" >
-                                <h:outputLabel value="#{pi.patientInvestigation.billItem.bill.billDate}"  >
-                                    <f:convertDateTime pattern="dd/MMM/yyyy"/>
-                                </h:outputLabel>
-                            </p:column>
+
                             <p:column  headerText="Bill No" styleClass="alignTop" >
                                 <h:outputLabel value="#{pi.patientInvestigation.billItem.bill.insId}"  >
                                 </h:outputLabel>
@@ -63,17 +55,35 @@
                                 <h:outputLabel value="#{pi.patientInvestigation.billItem.bill.patient.person.nameWithTitle}" >
                                 </h:outputLabel>
                             </p:column>
+
+
+                            <p:column  headerText="Bill Date" styleClass="alignTop" >
+                                <h:outputLabel value="#{pi.patientInvestigation.billItem.bill.billDate}"  >
+                                    <f:convertDateTime pattern="dd/MMM/yyyy"/>
+                                </h:outputLabel>
+                            </p:column>
+                            <p:column  headerText="Billed By" styleClass="alignTop" >
+                                <h:outputLabel value="#{pi.patientInvestigation.billItem.bill.creater.webUserPerson.name}"  >
+                                </h:outputLabel>
+                            </p:column>
+                            
                             <p:column  headerText="Approved at" styleClass="alignTop" >
                                 <h:outputLabel value="#{pi.approveAt}"  >
                                     <f:convertDateTime pattern="dd/MMM/yyyy hh:mm"/>
                                 </h:outputLabel>
                             </p:column>
+                            
                             <p:column  headerText="Cancelled" styleClass="alignTop" >
                                 <h:outputLabel value="#{pi.patientInvestigation.billItem.bill.cancelled?'Yes':'No'}"  >
                                 </h:outputLabel>
                             </p:column>
-                            <p:column  headerText="Returned" styleClass="alignTop" >
-                                <h:outputLabel value="#{pi.patientInvestigation.billItem.bill.refunded?'Yes':'No'}"  >
+                            <p:column  headerText="Cancelled By" styleClass="alignTop" >
+                                <h:outputLabel value="#{pi.patientInvestigation.billItem.bill.cancelledBill.creater.webUserPerson.name}"  >
+                                </h:outputLabel>
+                            </p:column>
+                            <p:column  headerText="Cancelled at" styleClass="alignTop" >
+                                <h:outputLabel value="#{pi.patientInvestigation.billItem.bill.cancelledBill.billTime}"  >
+                                    <f:convertDateTime pattern="dd/MMM/yyyy hh:mm"/>
                                 </h:outputLabel>
                             </p:column>
 
